--- a/_config.yml
+++ b/_config.yml
@@ -85,8 +85,8 @@ defaults:
 
 # 7. Site settings
 encoding: utf-8 # Make sure the encoding is right
-title: "Alembic" # Site name or title, also used in jekyll-seo-tag
-logo: "/assets/placeholder-logo.svg" # Site logo, also used in jekyll-seo-tag
+title: "Neo-Alembic" # Site name or title, also used in jekyll-seo-tag
+logo: "placeholder-logo.svg" # Site logo, also used in jekyll-seo-tag
 description: "Alembic is a starting point for Jekyll projects. Rather than starting from scratch, this boilerplate is designed to get the ball rolling immediately" # Site description and default description, also used in jekyll-seo-tag
 url: "https://tillbey.github.io/neo-alembic" # Site url, also used in jekyll-seo-tag
 repo: "https://github.com/daviddarnes/alembic"
@@ -98,10 +98,8 @@ avatarurl: "https://www.gravatar.com/avatar/6c0377abcf4da91cdd35dea4554b2a4c" # 
 menu:
   - title: 'Home'
     url: '/'
-  - title: 'Fork'
-    url: 'http://github.com/aron-bordin/neo-hpstr-jekyll-theme'
-  - title: 'Install'
-    url: 'http://github.com/aron-bordin/neo-hpstr-jekyll-theme#installation'
+  - title: 'Blog'
+    url: '/blog'
   - title: 'Tags'
     url: '/tags'
   - title: 'Categories'
@@ -114,6 +112,10 @@ menu:
         url: '/intro/code-highlighting-post/'
       - title: 'Sample Post'
         url: '/intro/sample-post/'
+  - title: 'About'
+    url: '/about'
+  - title: 'GitHub'
+    url: 'http://github.com/tillbey/neo-alembic'
 
 navigation_header:
   Home: /
